// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useQuery should execute a query and return some data 1`] = `
<div>
  <table>
    <caption>
      Table results
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          age
        </th>
        <th
          scope="col"
        >
          name
        </th>
        <th
          scope="col"
        >
          older
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Ringo
        </th>
        <td
          data-testid="age-Ringo"
        >
          17
        </td>
        <td
          data-testid="older-Ringo"
        >
          34
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Paul
        </th>
        <td
          data-testid="age-Paul"
        >
          18
        </td>
        <td
          data-testid="older-Paul"
        >
          36
        </td>
      </tr>
    </tbody>
  </table>
  <button>
    Add Lennon
  </button>
  <button>
    Add Harrison
  </button>
</div>
`;

exports[`useQuery should execute a query and return some data 2`] = `
<td
  data-testid="age-Ringo"
>
  17
</td>
`;

exports[`useQuery should execute a query and return some data 3`] = `
<td
  data-testid="age-Paul"
>
  18
</td>
`;

exports[`useQuery should react to a change in the queried table (add George Harrison) 1`] = `
<div>
  <table>
    <caption>
      Table results
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          age
        </th>
        <th
          scope="col"
        >
          name
        </th>
        <th
          scope="col"
        >
          older
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Ringo
        </th>
        <td
          data-testid="age-Ringo"
        >
          17
        </td>
        <td
          data-testid="older-Ringo"
        >
          34
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Paul
        </th>
        <td
          data-testid="age-Paul"
        >
          18
        </td>
        <td
          data-testid="older-Paul"
        >
          36
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          John
        </th>
        <td
          data-testid="age-John"
        >
          22
        </td>
        <td
          data-testid="older-John"
        >
          44
        </td>
      </tr>
    </tbody>
  </table>
  <button>
    Add Lennon
  </button>
  <button>
    Add Harrison
  </button>
</div>
`;

exports[`useQuery should react to a change in the queried table (add John Lennon) 1`] = `
<div>
  <table>
    <caption>
      Table results
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          age
        </th>
        <th
          scope="col"
        >
          name
        </th>
        <th
          scope="col"
        >
          older
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Ringo
        </th>
        <td
          data-testid="age-Ringo"
        >
          17
        </td>
        <td
          data-testid="older-Ringo"
        >
          34
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Paul
        </th>
        <td
          data-testid="age-Paul"
        >
          18
        </td>
        <td
          data-testid="older-Paul"
        >
          36
        </td>
      </tr>
    </tbody>
  </table>
  <button>
    Add Lennon
  </button>
  <button>
    Add Harrison
  </button>
</div>
`;
